[package]

name = "interactive"
version = "0.0.1"
authors = ["Huon Wilson <dbau.pp+github@gmail.com>"]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"
[dependencies.opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"